# hrr_go2_control_system

./: CMakeLists copy.txt  CMakeLists.txt  go2.urdf
configs/: daemon_config.yaml  lcm_subscriber_config.yaml  logger_config.yaml  way_point_config.yaml
include/: low_level.h  shared_memory.hpp  shm_utils.hpp
include/Tools/: CMakeLists.txt  Deploy.cpp  Deploy.hpp  Deploy_High.cpp  Deploy_High.hpp  Go2_Enum.h  Joy_Stick.hpp
include/daemon/: daemon.hpp
include/lcm_subscriber/: gps_t.lcm  lcm_subscriber.hpp
include/lcm_subscriber/gps_lcm_type/: gps_t.hpp  gps_t.py
include/logger/: logger.hpp
model/: high_policy_10000.pt  map_encoder_92000.pt  model_10000.pt  model_10400.pt  model_14000.pt  model_14450.pt  model_39600.pt  model_45000.pt  model_92000.pt  velocity_estimator_10000.pt  velocity_estimator_10400.pt  velocity_estimator_14000.pt  velocity_estimator_14450.pt  velocity_estimator_39600.pt  velocity_estimator_45000.pt
src/daemon/: daemon.cpp  main.cpp
src/lcm_subscriber/: lcm_subscriber.cpp  lcm_test.py  main.cpp
src/logger/: main.cpp
src/low_level/: low_level.cpp  main.cpp
